Fix overflow issue for reservations.css

--- a/src/stylesheets/reserve.css
+++ b/src/stylesheets/reserve.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Poppins", sans-serif;
+  /* overflow: hidden; */
 }
 
 .popup-message {
@@ -40,15 +41,14 @@ body {
 .reserve-main-container {
   width: 100%;
   padding: 1rem;
-  min-height: 100vh;
+  min-height: calc(100vh - 56px);
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
   text-align: center;
   gap: 20px;
-  background-image:
-    linear-gradient(0deg, #96bf0fe1, #96bf0fe1),
+  background-image: linear-gradient(0deg, #96bf0fe1, #96bf0fe1),
     url(/src/images/bmw-e-power-bike.png);
   color: white;
   background-position: center;
@@ -141,8 +141,7 @@ body {
   appearance: none;
   -moz-appearance: none;
   -webkit-appearance: none;
-  background:
-    url("data:image/svg+xml,<svg height='10px' width='10px' viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'><path d='M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z'/></svg>")
+  background: url("data:image/svg+xml,<svg height='10px' width='10px' viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'><path d='M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z'/></svg>")
     no-repeat;
   padding: 10px 32px 10px 10px;
   background-color: #96bf0fe1;
